just fixing title padding on mobile

--- a/src/css/header.less
+++ b/src/css/header.less
@@ -40,6 +40,7 @@ section.header {
 
       @media @small {
         position: relative;
+        top: 10px;
       }
 
       @media @mobile {
@@ -47,6 +48,7 @@ section.header {
         -webkit-transform: translateX(-50%);
         transform: translateX(-50%);
         width: 200px;
+        top: 0;
       }
     }
 
@@ -62,6 +64,7 @@ section.header {
       @media @small {
         position: relative;
         float: right;
+        top: 12px;
       }
 
       @media @mobile {
